--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="container-fluid mt-5  card-body shadow-lg">
+    <div>
+        <a href="">Helooooooooooo</a>
+    </div>
+</div>
+
