--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,66 +1,45 @@
 <body class="profile-page">
-    <div class="page-header header-filter" data-parallax="true"
-        style="background-image:url('http://wallpapere.org/wp-content/uploads/2012/02/black-and-white-city-night.png');">
+    <div class="page-header header-filter" data-parallax="true">
     </div>
     <div class="main main-raised">
         <div class="profile-content">
-            <div class="container">
+            <div class="">
                 <div class="row">
-                    <div class="col-md-6 ml-auto mr-auto">
-                        <div class="profile">
+                    <div class="col-md-9 ml-auto mr-auto">
+                        <div class="profile container-fluid">
                             <div class="avatar">
                                 <img class="rounded-circle" src="assets/img/Profile.jpg">
                             </div>
-                            <div class="name">
-                                <h3 class="title">J. Alberto Ramos R.</h3>
-                                <h6>Data Scientist ! Full Stack Developer</h6>
-                                <a href="#" class="btn btn-just-icon btn-link btn-dribbble"><i
-                                        class="fa fa-dribbble"></i></a>
-                                <a href="#" class="btn btn-just-icon btn-link btn-twitter"><i
-                                        class="fa fa-twitter"></i></a>
-                                <a href="#" class="btn btn-just-icon btn-link btn-pinterest"><i
-                                        class="fa fa-pinterest"></i></a>
+                            <div class="name p-2">
+                                <h3>J. Alberto Ramos R.</h3>
+                                <h6>Data Scientist | Full Stack Developer</h6>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="description text-center">
-                    <p>Data scientist dentro de rappipaygit</p>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 ml-auto mr-auto m-2">
-                        <div class="profile-tabs">
-                            <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="#studio" role="tab" data-toggle="tab">
-                                        <i class="material-icons">camera</i>
-                                        Studio
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#works" role="tab" data-toggle="tab">
-                                        <i class="material-icons">palette</i>
-                                        Work
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#favorite" role="tab" data-toggle="tab">
-                                        <i class="material-icons">favorite</i>
-                                        Favorite
-                                    </a>
-                                </li>
-                            </ul>
+                            <div class="d-flex justify-content-around navbar-light bg-white">
+                                <div class="p-2">
+                                    <li class="navbar-nav nav-link" routerLinkActive="active">
+                                        <a class="nav-link" [routerLink]="['Experience']">Experiencia</a>
+                                    </li>
+                                </div>
+                                <div class="p-2">
+                                    <li class="navbar-nav nav-link" routerLinkActive="active">
+                                        <a class="nav-link" [routerLink]="['proyects']">Proyectos</a>
+                                    </li>
+                                </div>
+                                <div class="p-2">
+                                    <li class="navbar-nav nav-link" routerLinkActive="active">
+                                        <a class="nav-link" [routerLink]="['courses']">Cursos</a>
+                                    </li>
+                                </div>
+                                <div class="p-2">
+                                    <li class="navbar-nav nav-link" routerLinkActive="active">
+                                        <a class="nav-link" [routerLink]="['about']">Sobre mi</a>
+                                    </li>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <footer class="footer text-center ">
-        <p>Made with <a href="https://demos.creative-tim.com/material-kit/index.html" target="_blank">Material Kit</a>
-            by Jose Alberto Ramos Rojas</p>
-    </footer>
-
-
 </body>
