--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -20,7 +20,7 @@
         <div class="mb-3  p-2 shadow">
             <div class="row no-gutters">
                 <div class="col-md-4 p-3 d-flex justify-content-center">
-                    <img class="card-img-top justify-content-center" src="assets/img/citibanamex.png" alt="Card image" height="100px">
+                    <img class="card-img-top justify-content-center" src="assets/img/citibanamex.png" alt="Card image">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -36,7 +36,7 @@
         <div class="mb-3 p-2 shadow">
             <div class="row no-gutters">
                 <div class="col-md-4 p-4 d-flex justify-content-center">
-                    <img class="card-img-top justify-content-center" src="assets/img/economia.png" alt="Card image" height="100px">
+                    <img class="card-img-top justify-content-center" src="assets/img/economia.png" alt="Card image">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -52,7 +52,7 @@
         <div class="mb-3 p-2 shadow">
             <div class="row no-gutters">
                 <div class="col-md-4 p-4 d-flex justify-content-center">
-                    <img class="card-img-top" src="assets/img/supermex.png" alt="Card image" height="100px">
+                    <img class="card-img-top" src="assets/img/supermex.png" alt="Card image" >
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
